Fix tests issue